test/libsolidity/syntaxTests/nameAndTypeResolution/553_no_address_members_on_contract_balance.sol
contract C {
    function f() public {
        this.balance;
    }
}
// ----
// TypeError: (47-59): Member "balance" not found or not visible after argument-dependent lookup in contract C
